--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@ h2 {
 <div class='container'>
  <div class='card'>
    <img src='Logo BULNES-MBA.jpg' class='logo'>
-   <h1>María Galiardo</h1>
+   <h1>MARIA GALIARDO</h1>
    <h2>International Business Developer</h2>
 
-   <div class='info'>
-     📞 +34 661 160 748<br>
-     📧 <a href='mailto:mgaliardo@bulnesmba.com' style='color:#e53935;'>mgaliardo@bulnesmba.com</a><br>
-     🌐 <a href='http://bulnesmba.com' style='color:#e53935;'>http://bulnesmba.com</a>
-   </div>
+<div class='info'>
+  📞 <a href="tel:+34661160748" style="color:#e53935;">+34 661 160 748</a><br>
+  📧 <a href="mailto:mgaliardo@bulnesmba.com" style="color:#e53935;">mgaliardo@bulnesmba.com</a><br>
+  🌐 <a href="http://bulnesmba.com" style="color:#e53935;">http://bulnesmba.com</a>
+</div>
 
    <a class='btn' href='Maria_Galiardo.vcf' download>📥 Guardar contacto</a>
  </div>
