--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h2 {
 <div class='container'>
  <div class='card'>
    <img src='Logo BULNES-MBA.jpg' class='logo'>
-   <h1>María Galiardo</h1>
+   <h1>MARIA GALIARDO</h1>
    <h2>International Business Developer</h2>
 
 <div class='info'>
